# hs-talks

./: .gitignore  README.md  mfine-hs-talks.cabal  stack.yaml
main/: Main.hs
src/: Lib.hs  Libv0.hs  Libv1.hs  Libv10.hs  Libv11.hs  Libv12.hs  Libv2.hs  Libv3.hs  Libv4.hs  Libv5.hs  Libv6.hs  Libv7.hs  Libv8.hs  Libv9.hs
