name:                mfine-hs-talks
version:             0.1.0
synopsis:            Haskell Talks code for Mark Fine
description:         Please see README.md
homepage:            http://github.com/mfine/hs-talks
license:             BSD3
license-file:        LICENSE
author:              Mark Fine
maintainer:          mark.fine@gmail.com
copyright:           2015 Mark Fine
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Libv0
                     , Libv1
                     , Libv2
                     , Libv3
                     , Libv4
                     , Libv5
                     , Libv6
                     , Libv7
                     , Libv8
                     , Libv9
                     , Libv10
                     , Libv11
                     , Libv12
  build-depends:       base >= 4.7 && < 5
                     , Chart
                     , Chart-cairo
                     , containers
                     , parsec
                     , random
  default-language:    Haskell2010

executable mfine-hs-talks
  hs-source-dirs:      main
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mfine-hs-talks
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mfine/hs-talks
